Fix footer spacing on media query 320px portrait

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1831,7 +1831,7 @@ textarea:focus {
 
     #social-footer i {
         font-size: 200%;
-        padding: 0 4rem 0 0;
+        padding: 0 3rem 0 0;
 
     }
 
